Minor changes on frontend

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,7 +3,13 @@
     // Use hover for the description of the existing attributes
     // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
     "version": "0.2.0",
-    "configurations": [
+    "configurations": [{
+            "type": "chrome",
+            "request": "launch",
+            "name": "Launch Chrome against localhost",
+            "url": "http://localhost:4200",
+            "webRoot": "${workspaceFolder}/cems-SPA"
+        },
         {
             "name": "Console app example",
             "type": "coreclr",
