--- a/cemsLogger/package.json
+++ b/cemsLogger/package.json
@@ -114,5 +114,9 @@
     "tslint-config-standard": "^8.0.1",
     "typedoc": "^0.12.0",
     "typescript": "^3.0.3"
+  },
+  "dependencies": {
+    "stack-generator": "^2.0.3",
+    "stacktrace-js": "^2.0.0"
   }
 }
