cahnged db host

--- a/cems.API/appsettings.json
+++ b/cems.API/appsettings.json
@@ -2,7 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=cems;User=cems;Password=cems;",
     "SqlAzure": "Server=tcp:cemsdb.database.windows.net,1433;Initial Catalog=cems;Persist Security Info=False;User ID=bbellovic;Password=Bello1+25B;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
-    "Docker":  "Server=localhost,1433;Database=cems;User ID=SA; password=Bello1+25B"
+    "Docker": "Server=db,1433;Database=cems;User ID=SA; password=Bello1+25B"
   },
   "Logging": {
     "LogLevel": {
