--- a/cems-SPA/angular.json
+++ b/cems-SPA/angular.json
@@ -32,9 +32,9 @@
               }],
               "optimization": true,
               "outputHashing": "all",
-              "sourceMap": true,
-              "evalSourceMap": true,
-              "vendorSourceMap": true,
+              "sourceMap": false,
+              "evalSourceMap": false,
+              "vendorSourceMap": false,
               "extractCss": true,
               "namedChunks": false,
               "aot": true,
