--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ job1:
   - ng build --prod
   - cd ../cems.API
   - sudo docker-compose build 
-  - sudo docker-compose up
+  - sudo docker-compose up -d
   cache:
     paths:
       - node_modules/
