--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ job1:
   - ls
   - cd cems-SPA
   - npm install
-  - ng build --prod --configuration=prod
+  - ng build --prod --configuration=production
   - cd ../cems.API
   - sudo docker-compose build 
   - sudo docker-compose up -d
