--- a/cems-SPA/package.json
+++ b/cems-SPA/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^7.0.2",
     "@angular/router": "^7.0.2",
     "@auth0/angular-jwt": "^2.0.0",
+    "@bbellovic/cems-logger-js": "^1.3.1",
     "alertifyjs": "^1.11.2",
     "bootstrap": "^4.1.3",
     "bootswatch": "^4.1.3",
