--- a/cems-SPA/package.json
+++ b/cems-SPA/package.json
@@ -11,33 +11,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.0.2",
-    "@angular/common": "^7.0.2",
-    "@angular/compiler": "^7.0.2",
-    "@angular/core": "^7.0.2",
-    "@angular/forms": "^7.0.2",
-    "@angular/http": "^7.0.2",
-    "@angular/platform-browser": "^7.0.2",
-    "@angular/platform-browser-dynamic": "^7.0.2",
-    "@angular/router": "^7.0.2",
+    "@angular/animations": "^7.1.1",
+    "@angular/common": "^7.1.1",
+    "@angular/compiler": "^7.1.1",
+    "@angular/core": "^7.1.1",
+    "@angular/forms": "^7.1.1",
+    "@angular/http": "^7.1.1",
+    "@angular/platform-browser": "^7.1.1",
+    "@angular/platform-browser-dynamic": "^7.1.1",
+    "@angular/router": "^7.1.1",
     "@auth0/angular-jwt": "^2.0.0",
-    "@bbellovic/cems-logger-js": "^1.3.1",
+    "@bbellovic/cems-logger-js": "^1.4.0",
     "alertifyjs": "^1.11.2",
     "bootstrap": "^4.1.3",
     "bootswatch": "^4.1.3",
-    "core-js": "^2.5.7",
+    "core-js": "^2.6.0",
     "font-awesome": "^4.7.0",
-    "ngx-bootstrap": "^3.1.1",
+    "ngx-bootstrap": "^3.1.2",
     "rxjs": "^6.3.3",
     "stacktrace-js": "^2.0.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.0",
-    "@angular/cli": "~7.0.4",
-    "@angular/compiler-cli": "^7.0.2",
-    "@angular/language-service": "^7.0.2",
-    "@types/jasmine": "^2.8.9",
+    "@angular-devkit/build-angular": "^0.10.7",
+    "@angular/cli": "^7.0.7",
+    "@angular/compiler-cli": "^7.1.1",
+    "@angular/language-service": "^7.1.1",
+    "@types/jasmine": "^2.8.12",
     "@types/jasminewd2": "^2.0.5",
     "@types/node": "^8.10.37",
     "@types/stacktrace-js": "0.0.32",
