--- a/cems-SPA/package.json
+++ b/cems-SPA/package.json
@@ -21,12 +21,13 @@
     "@angular/platform-browser-dynamic": "^7.1.1",
     "@angular/router": "^7.1.1",
     "@auth0/angular-jwt": "^2.0.0",
-    "@bbellovic/cems-logger-js": "^1.4.0",
+    "@bbellovic/cems-logger-js": "^1.6.0",
     "alertifyjs": "^1.11.2",
     "bootstrap": "^4.1.3",
     "bootswatch": "^4.1.3",
     "core-js": "^2.6.0",
     "font-awesome": "^4.7.0",
+    "highlight.js": "^9.13.1",
     "ngx-bootstrap": "^3.1.2",
     "rxjs": "^6.3.3",
     "stacktrace-js": "^2.0.0",
