--- a/cems.API/docker-compose.yml
+++ b/cems.API/docker-compose.yml
@@ -3,11 +3,13 @@ services:
   web:
     build: .
     ports:
-      - "5000:5000"
+    - "5000:5000"
     depends_on:
-      - db
+    - db
   db:
     image: "microsoft/mssql-server-linux:latest"
+    volumes:
+    - /opt/data:/var/opt/mssql
     environment:
       SA_PASSWORD: "Bello1+25B"
       ACCEPT_EULA: "Y"
