--- a/cems-SPA/package.json
+++ b/cems-SPA/package.json
@@ -11,50 +11,51 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.1.1",
-    "@angular/common": "^7.1.1",
-    "@angular/compiler": "^7.1.1",
-    "@angular/core": "^7.1.1",
-    "@angular/forms": "^7.1.1",
-    "@angular/http": "^7.1.1",
-    "@angular/platform-browser": "^7.1.1",
-    "@angular/platform-browser-dynamic": "^7.1.1",
-    "@angular/router": "^7.1.1",
-    "@auth0/angular-jwt": "^2.0.0",
-    "@bbellovic/cems-logger-js": "^1.6.1",
+    "@angular/animations": "^7.2.7",
+    "@angular/common": "^7.2.7",
+    "@angular/compiler": "^7.2.7",
+    "@angular/core": "^7.2.7",
+    "@angular/forms": "^7.2.7",
+    "@angular/http": "^7.2.7",
+    "@angular/platform-browser": "^7.2.7",
+    "@angular/platform-browser-dynamic": "^7.2.7",
+    "@angular/router": "^7.2.7",
+    "@auth0/angular-jwt": "^2.1.0",
+    "@bbellovic/cems-logger-js": "^1.8.1",
     "alertifyjs": "^1.11.2",
-    "bootstrap": "^4.1.3",
-    "bootswatch": "^4.1.3",
+    "bootstrap": "^4.3.1",
+    "bootswatch": "^4.3.1",
     "convert-source-map": "^1.6.0",
-    "core-js": "^2.6.0",
+    "core-js": "^2.6.5",
     "font-awesome": "^4.7.0",
-    "highlight.js": "^9.14.1",
-    "ngx-bootstrap": "^3.1.2",
-    "ngx-highlightjs": "^3.0.1",
-    "rxjs": "^6.3.3",
+    "highlight.js": "^9.15.6",
+    "ngx-bootstrap": "^3.2.0",
+    "ngx-highlightjs": "^3.0.3",
+    "rxjs": "^6.4.0",
     "stacktrace-js": "^2.0.0",
-    "zone.js": "~0.8.26"
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.10.7",
-    "@angular/cli": "^7.0.7",
-    "@angular/compiler-cli": "^7.1.1",
-    "@angular/language-service": "^7.1.1",
-    "@types/jasmine": "^2.8.12",
+    "@angular/cli": "^7.3.4",
+    "@angular/compiler-cli": "^7.2.7",
+    "@angular/language-service": "^7.2.7",
+    "@types/core-js": "~2.5.0",
+    "@types/jasmine": "^2.8.16",
     "@types/jasminewd2": "^2.0.5",
-    "@types/node": "^8.10.37",
+    "@types/node": "^10.12.29",
     "@types/stacktrace-js": "0.0.32",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.1",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.0.4",
+    "karma-coverage-istanbul-reporter": "^2.0.5",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "^5.4.1",
+    "protractor": "^5.4.2",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "^3.1.6"
+    "typescript": "^3.1.1"
   }
 }
