--- a/cems-SPA/package.json
+++ b/cems-SPA/package.json
@@ -11,17 +11,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.7",
-    "@angular/common": "^7.2.7",
-    "@angular/compiler": "^7.2.7",
-    "@angular/core": "^7.2.7",
-    "@angular/forms": "^7.2.7",
-    "@angular/http": "^7.2.7",
-    "@angular/platform-browser": "^7.2.7",
-    "@angular/platform-browser-dynamic": "^7.2.7",
-    "@angular/router": "^7.2.7",
+    "@angular/animations": "^7.2.9",
+    "@angular/common": "^7.2.9",
+    "@angular/compiler": "^7.2.9",
+    "@angular/core": "^7.2.9",
+    "@angular/forms": "^7.2.9",
+    "@angular/http": "^7.2.9",
+    "@angular/platform-browser": "^7.2.9",
+    "@angular/platform-browser-dynamic": "^7.2.9",
+    "@angular/router": "^7.2.9",
     "@auth0/angular-jwt": "^2.1.0",
-    "@bbellovic/cems-logger-js": "^1.8.1",
+    "@bbellovic/cems-logger-js": "^1.9.1",
     "alertifyjs": "^1.11.2",
     "bootstrap": "^4.3.1",
     "bootswatch": "^4.3.1",
@@ -32,18 +32,17 @@
     "ngx-bootstrap": "^3.2.0",
     "ngx-highlightjs": "^3.0.3",
     "rxjs": "^6.4.0",
-    "stacktrace-js": "^2.0.0",
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.10.7",
-    "@angular/cli": "^7.3.4",
-    "@angular/compiler-cli": "^7.2.7",
-    "@angular/language-service": "^7.2.7",
+    "@angular/cli": "^7.3.6",
+    "@angular/compiler-cli": "^7.2.9",
+    "@angular/language-service": "^7.2.9",
     "@types/core-js": "~2.5.0",
     "@types/jasmine": "^2.8.16",
     "@types/jasminewd2": "^2.0.5",
-    "@types/node": "^10.12.29",
+    "@types/node": "^10.14.1",
     "@types/stacktrace-js": "0.0.32",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
@@ -56,6 +55,6 @@
     "protractor": "^5.4.2",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "^3.1.1"
+    "typescript": "3.1.1"
   }
 }
