Added groups Modified dashboard Added highlighting for new logs (never displayed)

--- a/cems.API/appsettings.Development.json
+++ b/cems.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=cemsDB;User=sa;Password=Bello1+25B"
+    "DefaultConnection": "Server=db;Database=cems;User=sa;Password=Bello1+25B"
   },
   "Logging": {
     "LogLevel": {
